// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authorx -> authorx | %identifier parses { hello } | b world 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "col": 11,
          "line": 1,
          "lineBreaks": 0,
          "offset": 10,
          "text": "hello ",
          "toString": [Function],
          "type": "text",
          "value": "hello ",
        },
      ],
      "identifier": Object {
        "col": 7,
        "line": 1,
        "lineBreaks": 0,
        "offset": 6,
        "text": "b",
        "toString": [Function],
        "type": "identifier",
        "value": "b",
      },
      "type": "functionInvocation",
    },
    Object {
      "children": Array [
        Object {
          "col": 18,
          "line": 1,
          "lineBreaks": 0,
          "offset": 17,
          "text": " ",
          "toString": [Function],
          "type": "ws",
          "value": " ",
        },
      ],
      "type": "whitespace",
    },
    Object {
      "col": 19,
      "line": 1,
      "lineBreaks": 0,
      "offset": 18,
      "text": "world ",
      "toString": [Function],
      "type": "text",
      "value": "world ",
    },
  ],
  "identifier": Object {
    "col": 2,
    "line": 1,
    "lineBreaks": 0,
    "offset": 1,
    "text": "p",
    "toString": [Function],
    "type": "identifier",
    "value": "p",
  },
  "type": "functionInvocation",
}
`;

exports[`authorx -> authorx | %identifier parses { hello world } | b 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "col": 11,
          "line": 1,
          "lineBreaks": 0,
          "offset": 10,
          "text": "hello world ",
          "toString": [Function],
          "type": "text",
          "value": "hello world ",
        },
      ],
      "identifier": Object {
        "col": 7,
        "line": 1,
        "lineBreaks": 0,
        "offset": 6,
        "text": "b",
        "toString": [Function],
        "type": "identifier",
        "value": "b",
      },
      "type": "functionInvocation",
    },
    Object {
      "children": Array [
        Object {
          "col": 24,
          "line": 1,
          "lineBreaks": 0,
          "offset": 23,
          "text": " ",
          "toString": [Function],
          "type": "ws",
          "value": " ",
        },
      ],
      "type": "whitespace",
    },
  ],
  "identifier": Object {
    "col": 2,
    "line": 1,
    "lineBreaks": 0,
    "offset": 1,
    "text": "p",
    "toString": [Function],
    "type": "identifier",
    "value": "p",
  },
  "type": "functionInvocation",
}
`;

exports[`authorx -> authorx | %identifier parses a paragraph 1`] = `
Object {
  "children": Array [
    Object {
      "col": 1,
      "line": 2,
      "lineBreaks": 2,
      "offset": 5,
      "text": "hello world
this is authorx
",
      "toString": [Function],
      "type": "text",
      "value": "hello world
this is authorx
",
    },
  ],
  "identifier": Object {
    "col": 2,
    "line": 1,
    "lineBreaks": 0,
    "offset": 1,
    "text": "p",
    "toString": [Function],
    "type": "identifier",
    "value": "p",
  },
  "type": "functionInvocation",
}
`;

exports[`authorx -> authorx | %identifier parses a paragraph with an escape character 1`] = `
Object {
  "children": Array [
    Object {
      "col": 1,
      "line": 2,
      "lineBreaks": 0,
      "offset": 5,
      "text": "\\\\",
      "toString": [Function],
      "type": "text",
      "value": "\\\\",
    },
    Object {
      "children": Array [
        Object {
          "col": 2,
          "line": 2,
          "lineBreaks": 1,
          "offset": 6,
          "text": "
",
          "toString": [Function],
          "type": "ws",
          "value": "
",
        },
      ],
      "type": "whitespace",
    },
  ],
  "identifier": Object {
    "col": 2,
    "line": 1,
    "lineBreaks": 0,
    "offset": 1,
    "text": "p",
    "toString": [Function],
    "type": "identifier",
    "value": "p",
  },
  "type": "functionInvocation",
}
`;

exports[`authorx -> authorx | %identifier parses a paragraph with escaped function invocations 1`] = `
Object {
  "children": Array [
    Object {
      "col": 1,
      "line": 2,
      "lineBreaks": 0,
      "offset": 5,
      "text": "1 ",
      "toString": [Function],
      "type": "text",
      "value": "1 ",
    },
    Object {
      "col": 3,
      "line": 2,
      "lineBreaks": 0,
      "offset": 7,
      "text": "\\\\<",
      "toString": [Function],
      "type": "text",
      "value": "\\\\<",
    },
    Object {
      "children": Array [
        Object {
          "col": 5,
          "line": 2,
          "lineBreaks": 0,
          "offset": 9,
          "text": " ",
          "toString": [Function],
          "type": "ws",
          "value": " ",
        },
      ],
      "type": "whitespace",
    },
    Object {
      "col": 6,
      "line": 2,
      "lineBreaks": 1,
      "offset": 10,
      "text": "2
",
      "toString": [Function],
      "type": "text",
      "value": "2
",
    },
  ],
  "identifier": Object {
    "col": 2,
    "line": 1,
    "lineBreaks": 0,
    "offset": 1,
    "text": "p",
    "toString": [Function],
    "type": "identifier",
    "value": "p",
  },
  "type": "functionInvocation",
}
`;

exports[`authorx -> authorx | %identifier parses a paragraph with escaped function invocations followed by a real function invocation 1`] = `
Object {
  "children": Array [
    Object {
      "col": 1,
      "line": 2,
      "lineBreaks": 0,
      "offset": 5,
      "text": "1 ",
      "toString": [Function],
      "type": "text",
      "value": "1 ",
    },
    Object {
      "col": 3,
      "line": 2,
      "lineBreaks": 0,
      "offset": 7,
      "text": "\\\\<",
      "toString": [Function],
      "type": "text",
      "value": "\\\\<",
    },
    Object {
      "children": Array [
        Object {
          "col": 5,
          "line": 2,
          "lineBreaks": 0,
          "offset": 9,
          "text": " ",
          "toString": [Function],
          "type": "ws",
          "value": " ",
        },
      ],
      "type": "whitespace",
    },
    Object {
      "col": 6,
      "line": 2,
      "lineBreaks": 0,
      "offset": 10,
      "text": "2 ",
      "toString": [Function],
      "type": "text",
      "value": "2 ",
    },
    Object {
      "children": Array [
        Object {
          "col": 13,
          "line": 2,
          "lineBreaks": 0,
          "offset": 17,
          "text": "3 ",
          "toString": [Function],
          "type": "text",
          "value": "3 ",
        },
      ],
      "identifier": Object {
        "col": 9,
        "line": 2,
        "lineBreaks": 0,
        "offset": 13,
        "text": "b",
        "toString": [Function],
        "type": "identifier",
        "value": "b",
      },
      "type": "functionInvocation",
    },
    Object {
      "children": Array [
        Object {
          "col": 16,
          "line": 2,
          "lineBreaks": 1,
          "offset": 20,
          "text": "
",
          "toString": [Function],
          "type": "ws",
          "value": "
",
        },
      ],
      "type": "whitespace",
    },
  ],
  "identifier": Object {
    "col": 2,
    "line": 1,
    "lineBreaks": 0,
    "offset": 1,
    "text": "p",
    "toString": [Function],
    "type": "identifier",
    "value": "p",
  },
  "type": "functionInvocation",
}
`;

exports[`authorx -> authorx | %identifier parses a paragraph with escaped function invocations followed by text 1`] = `
Object {
  "children": Array [
    Object {
      "col": 1,
      "line": 2,
      "lineBreaks": 0,
      "offset": 5,
      "text": "1 ",
      "toString": [Function],
      "type": "text",
      "value": "1 ",
    },
    Object {
      "col": 3,
      "line": 2,
      "lineBreaks": 0,
      "offset": 7,
      "text": "\\\\<",
      "toString": [Function],
      "type": "text",
      "value": "\\\\<",
    },
    Object {
      "children": Array [
        Object {
          "col": 5,
          "line": 2,
          "lineBreaks": 0,
          "offset": 9,
          "text": " ",
          "toString": [Function],
          "type": "ws",
          "value": " ",
        },
      ],
      "type": "whitespace",
    },
    Object {
      "col": 6,
      "line": 2,
      "lineBreaks": 1,
      "offset": 10,
      "text": "2 hello
",
      "toString": [Function],
      "type": "text",
      "value": "2 hello
",
    },
  ],
  "identifier": Object {
    "col": 2,
    "line": 1,
    "lineBreaks": 0,
    "offset": 1,
    "text": "p",
    "toString": [Function],
    "type": "identifier",
    "value": "p",
  },
  "type": "functionInvocation",
}
`;

exports[`authorx -> authorx | %identifier parses hello { world } | b 1`] = `
Object {
  "children": Array [
    Object {
      "col": 6,
      "line": 1,
      "lineBreaks": 0,
      "offset": 5,
      "text": "hello ",
      "toString": [Function],
      "type": "text",
      "value": "hello ",
    },
    Object {
      "children": Array [
        Object {
          "col": 17,
          "line": 1,
          "lineBreaks": 0,
          "offset": 16,
          "text": "world ",
          "toString": [Function],
          "type": "text",
          "value": "world ",
        },
      ],
      "identifier": Object {
        "col": 13,
        "line": 1,
        "lineBreaks": 0,
        "offset": 12,
        "text": "b",
        "toString": [Function],
        "type": "identifier",
        "value": "b",
      },
      "type": "functionInvocation",
    },
    Object {
      "children": Array [
        Object {
          "col": 24,
          "line": 1,
          "lineBreaks": 0,
          "offset": 23,
          "text": " ",
          "toString": [Function],
          "type": "ws",
          "value": " ",
        },
      ],
      "type": "whitespace",
    },
  ],
  "identifier": Object {
    "col": 2,
    "line": 1,
    "lineBreaks": 0,
    "offset": 1,
    "text": "p",
    "toString": [Function],
    "type": "identifier",
    "value": "p",
  },
  "type": "functionInvocation",
}
`;

exports[`authorx -> authorx | %identifier parses hello 1`] = `
Object {
  "children": Array [
    Object {
      "col": 6,
      "line": 1,
      "lineBreaks": 0,
      "offset": 5,
      "text": "hello ",
      "toString": [Function],
      "type": "text",
      "value": "hello ",
    },
  ],
  "identifier": Object {
    "col": 2,
    "line": 1,
    "lineBreaks": 0,
    "offset": 1,
    "text": "p",
    "toString": [Function],
    "type": "identifier",
    "value": "p",
  },
  "type": "functionInvocation",
}
`;

exports[`authorx -> authorx | %identifier parses hello world 1`] = `
Object {
  "children": Array [
    Object {
      "col": 6,
      "line": 1,
      "lineBreaks": 0,
      "offset": 5,
      "text": "hello world ",
      "toString": [Function],
      "type": "text",
      "value": "hello world ",
    },
  ],
  "identifier": Object {
    "col": 2,
    "line": 1,
    "lineBreaks": 0,
    "offset": 1,
    "text": "p",
    "toString": [Function],
    "type": "identifier",
    "value": "p",
  },
  "type": "functionInvocation",
}
`;

exports[`authorx -> authorx | %identifier parses multiline hello world 1`] = `
Object {
  "children": Array [
    Object {
      "col": 1,
      "line": 2,
      "lineBreaks": 0,
      "offset": 5,
      "text": "hello ",
      "toString": [Function],
      "type": "text",
      "value": "hello ",
    },
    Object {
      "children": Array [
        Object {
          "col": 12,
          "line": 2,
          "lineBreaks": 0,
          "offset": 16,
          "text": "world ",
          "toString": [Function],
          "type": "text",
          "value": "world ",
        },
      ],
      "identifier": Object {
        "col": 8,
        "line": 2,
        "lineBreaks": 0,
        "offset": 12,
        "text": "b",
        "toString": [Function],
        "type": "identifier",
        "value": "b",
      },
      "type": "functionInvocation",
    },
    Object {
      "children": Array [
        Object {
          "col": 19,
          "line": 2,
          "lineBreaks": 1,
          "offset": 23,
          "text": "
",
          "toString": [Function],
          "type": "ws",
          "value": "
",
        },
      ],
      "type": "whitespace",
    },
  ],
  "identifier": Object {
    "col": 2,
    "line": 1,
    "lineBreaks": 0,
    "offset": 1,
    "text": "p",
    "toString": [Function],
    "type": "identifier",
    "value": "p",
  },
  "type": "functionInvocation",
}
`;
